fixed width for bg container on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -281,7 +281,12 @@ body {
 	
 	@media(min-width: 1400px){
 		width: 80%;
-	}
+    }
+    
+    @media(max-width: 500px){
+        width: 100%;
+        margin: 0 auto;
+    }
 }
 
 .container {
